--- a/sharepoint_mashup.html
+++ b/sharepoint_mashup.html
@@ -23,7 +23,7 @@
     (function() {
       // Get the SAP mashup context parameters
       const params = new URLSearchParams(window.location.search);
-      const sharepointUrl = params.get('sharepointUrl'); // e.g., ?sharepointUrl=https://company.sharepoint.com/sites/AccountFolder
+      const sharepointUrl = 'https://nucan365.sharepoint.com/sites/N-GRPVerkauf/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FN%2DGRPVerkauf%2FShared%20Documents%2FKundenordner%2FBenelux'
 
       if (sharepointUrl) {
         // Redirect the user to the SharePoint folder
